--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ header .nav-link:hover {
     text-transform: uppercase;
 }
 
+.navbar-toggler {
+    background-color: #fff;
+}
+
 .nav-item i {
     color: #fff;
 }
@@ -25,6 +29,10 @@ header .nav-link:hover {
 
 #sobre p {
     font-size: 20px;
+}
+
+.img-thumbnail:hover {
+    border: 2px solid #000;
 }
 
 .btn {
@@ -55,4 +63,18 @@ footer .nav-link:hover {
     position: absolute;
     bottom: 0;
     width: 100%;
+}
+
+@media (max-width: 767px) {
+    header img {
+        max-width: 120px;
+    }
+
+    .dropdown {
+        display: block;
+    }
+
+    #sobre img {
+        max-width: 90%;
+    }
 }
